--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,6 +1,6 @@
 {% extends 'base_acc.html' %}
 
-{% block title %}Sign up to Django Boards{% endblock %}
+{% block title %}Sign up to Hobby app!{% endblock %}
 
 {% block content %}
   <div class="row justify-content-center">
