--- a/templates/event_detail.html
+++ b/templates/event_detail.html
@@ -35,18 +35,38 @@
                             </div>
                         </div>
                         <div class="card-footer">
+
+                            <div class="like">
+                                <img class="like__icon" width="10%" height="10%" src="{% static "like.svg" %}"> </img>
+                                <p class="like__count">{{ total_likes }}</p>
+                            </div>
                             <div class="d-flex justify-content-center">
-                                {% for message in messages %}
-                                {{ message.message }}
-                                {{ message.created_by }}
-                                {% endfor %}
+                                
 
                             </div>
                         </div>
                     </div>
 
+                {% for message in messages %}
+                    <div class="card mb-2">
+                        <div class="card-body p-3">
+                            <div class="row mb-3">
+                                <div class="col-6">
+                                    <strong class="text-muted">{{ message.created_by }}</strong>
+                                </div>
+                                <div class="col-6 text-right">
+                                    <small class="text-muted">{{ message.created_at }}</small>
+                                </div>
+                            </div>
+                            {{ message.message }}
+                        </div>
+                    </div>
+                {% endfor %}
+
             </div>
         </div>
     </div>
+
+
 
 {% endblock %}
