--- a/templates/event_detail.html
+++ b/templates/event_detail.html
@@ -2,10 +2,29 @@
 
 {% load static %}
 
+{% block stylesheet %}
+    <link rel="stylesheet" href="{% static 'css/sitestyle.css' %}">
+    <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+<script type="text/javascript">
+    $(document).ready(function() {
+
+    var bgArray = {{ board.back_img|safe }};
+    var bg = bgArray[Math.floor(Math.random() * bgArray.length)];
+    console.log(bgArray);
+    console.log(bg);
+    var path = '/media/board_back/';
+
+    $('body').css('background-image', 'url(' + path + bg + ')');
+
+});
+</script>
+{% endblock %}
+
 {% block title %}
     Event
 {% endblock %}
 
+<body>
 {% block content %}
 
     <div class="container">
@@ -15,14 +34,14 @@
                     <div class="card">
                         <div class="card-header">
                             <div class="d-flex justify-content-center">
-                                <p>
+                                 <h1 class="display-4">
                                     {{ event.title }}
-                                </p>
+                                </h1>
                             </div>
+                                <img class="card-img-top" src="{{ event.event_pic.url }}" alt="Card image" style="width:100%">
                         </div>
                         <div class="card-body">
-                            <div class="d-flex justify-content-center">
-                                <img class="img-fluid event_img" src="{{ event.event_pic.url }}">
+                            <div>
                                 <p>
                                     {{ event.subject }}
                                 </p>
@@ -37,16 +56,20 @@
                         <div class="card-footer">
 
                             <div class="like">
-                                <img class="like__icon" width="10%" height="10%" src="{% static "like.svg" %}"> </img>
-                                <p class="like__count">{{ total_likes }}</p>
+                                <img class="like__icon" width="10%" height="10%" src="{% static "like_red.svg" %}" id="{{ event.id }}"> </img>
+                                <p class="like__count" id="count {{ event.id }}">{{ total_likes }}</p>
                             </div>
                             <div class="d-flex justify-content-center">
-                                
+
 
                             </div>
                         </div>
                     </div>
-
+            <form method="post" novalidate>
+                {% csrf_token %}
+                {% include 'includes/form.html' %}
+                <button type="submit" class="btn btn-primary btn-block">Comment</button>
+            </form>
                 {% for message in messages %}
                     <div class="card mb-2">
                         <div class="card-body p-3">
@@ -58,10 +81,11 @@
                                     <small class="text-muted">{{ message.created_at }}</small>
                                 </div>
                             </div>
-                            {{ message.message }}
+                            {{ message.comment }}
                         </div>
                     </div>
                 {% endfor %}
+            </div>
 
             </div>
         </div>
@@ -69,4 +93,9 @@
 
 
 
+{% endblock %}
+</body>
+
+{%  block script %}
+    <script src="{% static 'js/like.js' %}"></script>
 {% endblock %}
