--- a/templates/event_detail.html
+++ b/templates/event_detail.html
@@ -3,21 +3,7 @@
 {% load static %}
 
 {% block stylesheet %}
-    <link rel="stylesheet" href="{% static 'css/sitestyle.css' %}">
-    <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
-<script type="text/javascript">
-    $(document).ready(function() {
 
-    var bgArray = {{ board.back_img|safe }};
-    var bg = bgArray[Math.floor(Math.random() * bgArray.length)];
-    console.log(bgArray);
-    console.log(bg);
-    var path = '/media/board_back/';
-
-    $('body').css('background-image', 'url(' + path + bg + ')');
-
-});
-</script>
 {% endblock %}
 
 {% block title %}
@@ -57,11 +43,7 @@
 
                             <div class="like">
                                 <img class="like__icon" width="10%" height="10%" src="{% static "like_red.svg" %}" id="{{ event.id }}"> </img>
-                                <p class="like__count" id="count {{ event.id }}">{{ total_likes }}</p>
-                            </div>
-                            <div class="d-flex justify-content-center">
-
-
+                                <span class="like__count" id="count {{ event.id }}">{{ total_likes }}</span>
                             </div>
                         </div>
                     </div>
@@ -70,12 +52,12 @@
                 {% include 'includes/form.html' %}
                 <button type="submit" class="btn btn-primary btn-block">Comment</button>
             </form>
-                {% for message in messages %}
+                <div>
                     <div class="card mb-2">
                         <div class="card-body p-3">
                             <div class="row mb-3">
                                 <div class="col-6">
-                                    <strong class="text-muted">{{ message.created_by }}</strong>
+                                    <strong class="text-muted" id="comslist"></strong>
                                 </div>
                                 <div class="col-6 text-right">
                                     <small class="text-muted">{{ message.created_at }}</small>
@@ -84,18 +66,19 @@
                             {{ message.comment }}
                         </div>
                     </div>
-                {% endfor %}
+                </div>
             </div>
 
             </div>
         </div>
     </div>
 
-
+    <button class="more"> More </button>
 
 {% endblock %}
 </body>
 
 {%  block script %}
     <script src="{% static 'js/like.js' %}"></script>
+    <script src="{% static 'js/index.js' %}"></script>
 {% endblock %}
