--- a/templates/event_detail.html
+++ b/templates/event_detail.html
@@ -52,28 +52,17 @@
                 {% include 'includes/form.html' %}
                 <button type="submit" class="btn btn-primary btn-block">Comment</button>
             </form>
-                <div>
-                    <div class="card mb-2">
-                        <div class="card-body p-3">
-                            <div class="row mb-3">
-                                <div class="col-6">
-                                    <strong class="text-muted" id="comslist"></strong>
-                                </div>
-                                <div class="col-6 text-right">
-                                    <small class="text-muted">{{ message.created_at }}</small>
-                                </div>
-                            </div>
-                            {{ message.comment }}
-                        </div>
-                    </div>
-                </div>
+
+                <div id="comslist"></div>
             </div>
 
             </div>
+            <button class="more"> More </button>
         </div>
     </div>
 
-    <button class="more"> More </button>
+
+
 
 {% endblock %}
 </body>
