--- a/templates/event_detail.html
+++ b/templates/event_detail.html
@@ -56,6 +56,8 @@
                 <div id="comslist"></div>
             </div>
 
+            {{ like_count }}
+
             </div>
             <button class="more"> More </button>
         </div>
